client/src/ui/_vars.scss
/* ... */
$mdn-theme-light-text-link: $mdn-color-light-theme-blue-60;
$mdn-theme-light-text-invert: $mdn-color-white;
$mdn-theme-light-background-primary: $mdn-color-white;
$mdn-theme-light-background-secondary: $mdn-color-neutral-light-70;
$mdn-theme-light-background-tertiary: $mdn-color-white;
$mdn-theme-light-background-toc-active: $mdn-color-neutral-light-90;
$mdn-theme-light-border-primary: $mdn-color-neutral-20;
$mdn-theme-light-border-secondary: $mdn-color-neutral-20;
$mdn-theme-light-border-success: $mdn-color-light-theme-green-20;
$mdn-theme-light-button-primary-default: $mdn-color-neutral-90;
$mdn-theme-light-button-primary-hover: $mdn-color-neutral-20;
$mdn-theme-light-button-primary-active: $mdn-color-neutral-30;
$mdn-theme-light-button-primary-inactive: $mdn-color-neutral-90;
$mdn-theme-light-button-secondary-default: $mdn-color-white;
$mdn-theme-light-button-secondary-hover: $mdn-color-neutral-20;
$mdn-theme-light-button-secondary-active: $mdn-color-neutral-20;
$mdn-theme-light-button-secondary-inactive: $mdn-color-neutral-light-70;
$mdn-theme-light-button-secondary-border-focus: $mdn-color-light-theme-blue-50;
$mdn-theme-light-button-secondary-border-red: $mdn-color-light-theme-red-30;
$mdn-theme-light-button-secondary-border-red-focus: $mdn-color-light-theme-red-10;
$mdn-theme-light-icon-primary: $mdn-color-neutral-60;
$mdn-theme-light-icon-secondary: $mdn-color-neutral-30;
$mdn-theme-light-icon-information: $mdn-color-light-theme-blue-50;
$mdn-theme-light-icon-warning: $mdn-color-light-theme-red-50;
$mdn-theme-light-icon-critical: $mdn-color-light-theme-red-60;
$mdn-theme-light-icon-success: $mdn-color-light-theme-green-60;
$mdn-theme-light-accent-primary: $mdn-color-light-theme-blue-50;
$mdn-theme-light-accent-secondary: $mdn-color-light-theme-blue-50;
$mdn-theme-light-field-focus-border: $mdn-color-light-theme-blue-50;
$mdn-theme-light-focus-01: 0 0 0 3px rgba(0, 144, 237, 0.4);
$mdn-theme-light-shadow-01: 0 1px 2px rgba(43, 42, 51, 0.05);
$mdn-theme-light-shadow-02: 0 1px 6px rgba(43, 42, 51, 0.1);

$mdn-theme-light-code-token-tag: $mdn-color-light-theme-blue-60;
$mdn-theme-light-code-token-punctuation: $mdn-color-neutral-50;
$mdn-theme-light-code-token-attribute-name: $mdn-color-light-theme-red-60;
$mdn-theme-light-code-token-attribute-value: $mdn-color-light-theme-green-60;
$mdn-theme-light-code-token-comment: $mdn-color-neutral-50;
$mdn-theme-light-code-token-default: $mdn-color-neutral-90;
$mdn-theme-light-code-token-selector: $mdn-color-light-theme-violet-60;
$mdn-theme-light-code-background-inline: $mdn-color-neutral-light-80;
$mdn-theme-light-code-background-block: $mdn-color-neutral-light-80;

$mdn-theme-dark-text-primary: $mdn-color-white;
$mdn-theme-dark-text-secondary: $mdn-color-neutral-20;
$mdn-theme-dark-text-inactive: #{$mdn-color-neutral-20}a6;
$mdn-theme-dark-text-link: $mdn-color-dark-theme-blue-30;
$mdn-theme-dark-text-invert: $mdn-color-neutral-90;
$mdn-theme-dark-background-primary: $mdn-color-neutral-90;
$mdn-theme-dark-background-secondary: $mdn-color-neutral-80;
$mdn-theme-dark-background-tertiary: $mdn-color-neutral-70;
$mdn-theme-dark-background-toc-active: $mdn-color-neutral-80;
$mdn-theme-dark-border-primary: $mdn-color-neutral-50;
$mdn-theme-dark-border-secondary: $mdn-color-neutral-60;
$mdn-theme-dark-border-success: $mdn-color-dark-theme-green-20;
$mdn-theme-dark-button-primary-default: $mdn-color-white;
$mdn-theme-dark-button-primary-hover: $mdn-color-neutral-80;
$mdn-theme-dark-button-primary-active: $mdn-color-neutral-70;
$mdn-theme-dark-button-primary-inactive: $mdn-color-white;
$mdn-theme-dark-button-secondary-default: $mdn-color-neutral-70;
$mdn-theme-dark-button-secondary-hover: $mdn-color-neutral-50;
$mdn-theme-dark-button-secondary-active: $mdn-color-neutral-40;
$mdn-theme-dark-button-secondary-inactive: $mdn-color-neutral-70;
$mdn-theme-dark-shadow-01: 0 1px 2px rgba(251, 251, 254, 0.2);
$mdn-theme-dark-shadow-02: 0 1px 6px rgba(251, 251, 254, 0.2);
$mdn-theme-dark-icon-primary: $mdn-color-white;
$mdn-theme-dark-icon-secondary: $mdn-color-neutral-30;
$mdn-theme-dark-icon-information: $mdn-color-dark-theme-blue-40;
$mdn-theme-dark-icon-warning: $mdn-color-dark-theme-yellow-40;
$mdn-theme-dark-icon-critical: $mdn-color-dark-theme-red-40;
$mdn-theme-dark-icon-success: $mdn-color-dark-theme-green-40;
$mdn-theme-dark-accent-primary: $mdn-color-dark-theme-blue-40;
$mdn-theme-dark-accent-secondary: $mdn-color-dark-theme-blue-40;
$mdn-theme-dark-field-focus-border: $mdn-color-white;
$mdn-theme-dark-focus-01: 0 0 0 3px rgba(251, 251, 254, 0.5);

$mdn-theme-dark-code-token-tag: $mdn-color-dark-theme-blue-20;
$mdn-theme-dark-code-token-punctuation: $mdn-color-neutral-30;
$mdn-theme-dark-code-token-attribute-name: $mdn-color-dark-theme-red-30;
$mdn-theme-dark-code-token-attribute-value: $mdn-color-dark-theme-green-30;
$mdn-theme-dark-code-token-comment: $mdn-color-neutral-30;
$mdn-theme-dark-code-token-default: $mdn-color-white;
$mdn-theme-dark-code-token-selector: $mdn-color-dark-theme-violet-30;
$mdn-theme-dark-code-background-inline: $mdn-color-neutral-80;
$mdn-theme-dark-code-background-block: $mdn-color-neutral-80;

$screen-sm: 426px;
$screen-md: 769px;
$screen-lg: 992px;
$screen-xl: 1200px;
$screen-xxl: 1441px;

/*
 * z-index scale
 */
$send-to-back: -1;
$bring-to-front: 9999;
$bottom-layer: 100;
$middle-layer: 200;
$top-layer: 300;

